@@ -31,8 +31,8 @@ class ServerTestCase(unittest.TestCase):
             pass
 
     def test_server_vars(self):
-        version = self.server.version
-        config = self.server.config
+        version = self.server.version()
+        config = self.server.config()
         stats = self.server.stats()
         tasks = self.server.tasks()
 
@@ -75,7 +75,7 @@ class ServerTestCase(unittest.TestCase):
         b = self.server.create('python-tests-a')
         result = self.server.replicate('python-tests', 'python-tests-a', continuous=True)
         self.assertEquals(result['ok'], True)
-        version = tuple(int(i) for i in self.server.version.split('.')[:2])
+        version = tuple(int(i) for i in self.server.version().split('.')[:2])
         if version >= (0, 10):
             self.assertTrue('_local_id' in result)
 
@@ -253,7 +253,7 @@ class DatabaseTestCase(unittest.TestCase):
         self.assertTrue(self.db.compact('test'))
 
     def test_view_function_objects(self):
-        if 'python' not in self.server.config['query_servers']:
+        if 'python' not in self.server.config()['query_servers']:
             return
 
         for i in range(1, 4):
